fix flex: 1 for pageContent on IE

--- a/wp-content/themes/ushipnetwork/css/style.css
+++ b/wp-content/themes/ushipnetwork/css/style.css
@@ -811,7 +811,7 @@ b, strong {
 
 /* line 30, ../sass/_partials/_base.scss */
 .pageContent {
-  flex: 1;
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   padding-top: 80px;
