--- a/wp-content/themes/ushipnetwork/sass/_partials/_base.scss
+++ b/wp-content/themes/ushipnetwork/sass/_partials/_base.scss
@@ -28,7 +28,7 @@ b, strong {
 }
 
 .pageContent {
-  flex: 1;
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   padding-top: 80px;
